# gdb-stubs

./: .gitignore  CMakeLists.txt  README.md  README.rst
.github/workflows/: ci.yml  desktop-unit-test.yml
cmake/: FindSphinx.cmake
cmake/toolchains/: gcc-arm-none-eabi.cmake
documentation/: CMakeLists.txt  Doxyfile.in  api.rst  conf.py  conf.py.in  getting-started.rst  index.rst  layout.rst  license.rst  requirements.rst
include/: gdbdevice.h  gdbsconfig.h  gdbsdevice.h  gdbstub.h
source/: CMakeLists.txt  core.c  core.h
source/auxiliary/: binary.c  binary.h  checksum.c  checksum.h  hex.c  hex.h  packet.c  packet.h  rle.c  rle.h
source/auxilliary/: binary.c  checksum.c  checksum.h  hex.c  hex.h  rle.c  rle.h
source/debug/: debug.h
source/protocol/: ack.c  ack.h  receive.c  receive.h
source/stdc/: assert.h  memset.h  null.h  size.h
tests/unit/: CMakeLists.txt  tap.h  test_auxiliary_binary.c  test_auxiliary_checksum.c  test_auxiliary_hex.c  test_auxiliary_packet.c  test_auxiliary_rle.c  test_auxilliary_binary.c  test_auxilliary_checksum.c  test_auxilliary_hex.c  test_auxilliary_rle.c  test_core.c  test_protocol_ack.c  test_tap_sanity.c
tools/: mkpacket
